# software

./: .gitignore  CMakeLists.txt  LICENSE  README.md
chip32/: chip32.h  chip32_assembler.cpp
cmake/: cross-gcc.cmake  toolchain-arm-none-eabi.cmake
common/: chip32.cpp  chip32.h
cpu/atmel-samd21/: CMakeLists.txt  hal_gpio.h  include.cmake  ost_hal_wrapper.c  platform.h  spi_display.c  spi_master.c  spi_master.h  startup_samd21.c
docs/: I2S_Freq_trial.ods
hal/: ost_common.h
ost_convert/src/: ni_parser.c  ni_parser.h
ost_editor/: Blueprints.json  CMakeLists.txt  ost_editor.ini
ost_editor/examples/: two_images.json
ost_editor/imgui-knobs/: imgui-knobs.cpp
ost_editor/src/: application.cpp  application.h  chip32_assembler.cpp  chip32_assembler.h  chip8.c  code_editor.cpp  code_editor.h  console_window.cpp  graph.h  main.cpp  ost_wrapper.cpp  sdl_wrapper.cpp  sdl_wrapper.h
ost_editor/src/blueprint/: blueprint.cpp  blueprint.h  blueprint_ori.cpp  node_base.cpp  node_base.h  node_image.cpp  node_image.h
platform/arduino-mkr-zero/: ost_hal_wrapper.c
platform/qt-qml/: .gitignore  CMakeLists.txt  packarchive.cpp  packarchive.h
platform/sipeed-longan-nano/: ost_hal_wrapper.c  spi1.c
ports/atmel-samd21/: ost_hal_wrapper.c  spi_master.c  system_samd21.c  uart.c
src/: debug.c  filesystem.c  main.c  ost_common.h  ost_tasker.c  picture.c  picture.h  sdcard.c
test/bmp_decoding/: main.cpp
test/chip32_test/: CMakeLists.txt  main.cpp  test_parser.cpp
